--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -37,7 +37,7 @@
             sizes = "200px"
             class="preview z-depth-1 rounded"
             zoomable=true
-            avoid_scaling=true
+            avoid_scaling=false
             alt=entry.preview
           %}
         {% endif %}
