--- a/_includes/figure.liquid
+++ b/_includes/figure.liquid
@@ -70,6 +70,7 @@
       {% endif %}
       {% if include.zoomable %}
         data-zoomable
+        data-zoom-src="/assets/img/publication_preview"
       {% endif %}
       {% if include.loading %}
         loading="{{ include.loading }}"
