--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -730,6 +730,9 @@ footer.sticky-bottom {
       margin-bottom: 1rem;
 
       .preview {
+        width: 100%;
+        min-width: 120px;   // optional
+        max-width: 320px;   // or whatever looks good
       }
 
       .abbr {
